# 2dxcustomize

./: .gitignore  CMakeLists.txt  README.md
res/: assets.qrc  main.rc
res/items/: Burst.txt  FullComboEffect.txt  JudgeFont.txt  LaneBeam.txt  LaneCover.txt  NoteSkin.txt  Turntable.txt
src/: context.cpp  context.h  customize.cpp  customize.h  customize_game_data.h  loading_dialog.cpp  loading_dialog.h  loading_dialog.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  process.cpp  process.h
src/util/: find_pattern.h
